# Neuromorphic-Navigation-Simulation

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: python-publish.yml
algorithms/: ant_path_integration.py  baseline_nav.py  bee_swarm_pheromones.py  chemotaxis_nav.py  cpg_locomotion.py  deep_rl_nav.py  neuromorphic_spiking.py  potential_field_nav.py  rodent_cognitive_map.py  soft_body_haptic_nav.py  swarm_consensus.py
config/: simulation_params.json
docker/: Dockerfile  docker-compose.yml  ros2.Dockerfile
ros2_ws/: README.md
ros2_ws/src/neuromorphic_navigation_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/neuromorphic_navigation_ros/launch/: simulation_bridge.launch.py
ros2_ws/src/neuromorphic_navigation_ros/neuromorphic_navigation_ros/: __init__.py  bridge_node.py
ros2_ws/src/neuromorphic_navigation_ros/resource/: neuromorphic_navigation_ros
src/: environment.py  robot.py  simulation.py
src/utils/: plotter.py
