[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "neuromorphic-navigation-simulation"
version = "1.0.0"
description = "Neuromorphic Navigation Simulation - Bio-inspired robotics algorithms"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Chandan Sheikder", email = "chandan@bit.edu.cn"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[tool.setuptools]
packages = []
